force-app/main/default/objects/Avion__c/fields/Auxiliares_de_Vuelo_Requeridos__c.field-meta.xml
<CustomField>
    <fullName>Auxiliares_de_Vuelo_Requeridos__c</fullName>
    <description>Formula que calcula el número de tripulación necesaria para un vuelo</description>
    <formula>(N_mero_de_pasajeros_clase_negocios__c + N_mero_de_pasajeros_clase_turista__c) / 25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auxiliares de Vuelo Requeridos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>