force-app/main/default/objects/Avion__c/fields/N_mero_de_avi_n__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_avi_n__c</fullName>
    <description>Número de identificación del avión</description>
    <displayFormat>AV-{00000}</displayFormat>
    <label>Número de avión</label>
    <type>AutoNumber</type>
</CustomField>