force-app/main/default/objects/Avion__c/fields/N_mero_de_pasajeros_clase_negocios__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_pasajeros_clase_negocios__c</fullName>
    <description>Número de pasajeros clase negocios con los que cuenta el avión</description>
    <label>Número de pasajeros clase negocios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>