force-app/main/default/objects/Avion__c/fields/N_mero_de_pasajeros_clase_turista__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_pasajeros_clase_turista__c</fullName>
    <description>Número de pasajeros clase turista con los cuenta el avión</description>
    <label>Número de pasajeros clase turista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>