force-app/main/default/objects/Avion__c/fields/Solo_carga__c.field-meta.xml
<CustomField>
    <fullName>Solo_carga__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla para validar si el avión es de carga</description>
    <label>Solo carga</label>
    <type>Checkbox</type>
</CustomField>