force-app/main/default/objects/Avion__c/fields/VIajes_internacionales__c.field-meta.xml
<CustomField>
    <fullName>VIajes_internacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla de verificación para validar que el avión realiza el viajes internacionales</description>
    <label>VIajes internacionales</label>
    <type>Checkbox</type>
</CustomField>