force-app/main/default/objects/Avion__c/listViews/Airbus_A330.listView-meta.xml
<ListView>
    <fullName>Airbus_A330</fullName>
    <columns>NAME</columns>
    <columns>Activo__c</columns>
    <columns>N_mero_de_avi_n__c</columns>
    <columns>Auxiliares_de_Vuelo_Requeridos__c</columns>
    <columns>N_mero_de_pasajeros_clase_negocios__c</columns>
    <columns>N_mero_de_pasajeros_clase_turista__c</columns>
    <columns>VIajes_internacionales__c</columns>
    <columns>Viajes_nacionales__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Airbus A330</value>
    </filters>
    <label>Airbus A330</label>
</ListView>