force-app/main/default/objects/Avion__c/listViews/ATR_72.listView-meta.xml
<ListView>
    <fullName>ATR_72</fullName>
    <columns>NAME</columns>
    <columns>Activo__c</columns>
    <columns>N_mero_de_avi_n__c</columns>
    <columns>Auxiliares_de_Vuelo_Requeridos__c</columns>
    <columns>N_mero_de_pasajeros_clase_negocios__c</columns>
    <columns>N_mero_de_pasajeros_clase_turista__c</columns>
    <columns>VIajes_internacionales__c</columns>
    <columns>Viajes_nacionales__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>ATR-72</value>
    </filters>
    <label>ATR-72</label>
</ListView>