force-app/main/default/objects/Avion__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>N_mero_de_pasajeros_clase_negocios__c</columns>
    <columns>N_mero_de_pasajeros_clase_turista__c</columns>
    <columns>Auxiliares_de_Vuelo_Requeridos__c</columns>
    <columns>Capacidad_de_carga__c</columns>
    <filterScope>Mine</filterScope>
    <label>Todos</label>
</ListView>